# swc-condition-switch-plugin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  package.json  pnpm-lock.yaml
.cargo/: config.toml
examples/: App.tsx  package.json  rsbuild.config.ts
examples/public/: index.html
examples/src/: index.tsx
src/: lib.rs
tests/: transform_tests.rs
types/: condition.d.ts
